--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="business loans, SD Loans and Leasing, business financing, commercial loans, Australia">
     <title>Business Loans - SD Loans and Leasing</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://suzumi-suu.github.io/sd-loans-and-leasing-business-loans/">
+    <meta name="google-site-verification" content="GHww9982NYuhU43QhBvgqp2UpY7auLZYyZc6PLVPwO8" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ2J9M85Z2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZ2J9M85Z2');
+</script>
 </head>
 <body>
 
